# hyper-governance-core

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  codex.lock.json  codex.manifest.yaml  codex.schema.json  implementation_plan.md  pyproject.toml  spec.md  spec_v1.2.0.md
.codex/: catalog-commit.txt  stack.yaml
.governance/schemas/: stack.schema.json
.governance/standards/: architecture.md  process.yaml  stack.yaml
.governance/validators/: ast_enforcer.py
agentic-governance-core/: README.md
agentic-governance-core/schemas/: process.schema.json
agentic-governance-core/standards/: stack.yaml
agentic-governance-core/validators/: stack_police.py
src/codex/: __init__.py  catalog.py  cli.py  manifest.py  merge.py  render.py  schema.py
src/codex/data/: __init__.py
src/codex/data/fragments/: architecture-core@1.0.0.yaml
src/codex/validators/: __init__.py  ast_enforcer.py  stack_police.py
tests/: test_bundled_fragments.py  test_cli.py  test_merge.py  test_render.py  test_schema.py  test_validators.py
